--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,19 +29,20 @@ services:
   backend:
     # Using local backend repository that we just set up
     build:
-      context: ../cancer-genix-backend
+      context: ./backend
       dockerfile: Dockerfile
     ports:
       - "${BACKEND_PORT:-8000}:8000"
     volumes:
-      - ../cancer-genix-backend:/app
+      - ./backend:/app
     environment:
       - PORT=8000
-      - DATABASE_URI=${DATABASE_URI:-mysql+pymysql://user:password@db/cancergenix}
+      - DATABASE_URI=${DATABASE_URI:-mysql+pymysql://user:password@db/genascope}
       - CORS_ORIGINS=["http://localhost:4321"]
       - SECRET_KEY=${SECRET_KEY:-your_default_secret_key_here}
+      - PYTHONPATH=/app
     restart: unless-stopped
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn run:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
       - db
       
@@ -51,7 +52,7 @@ services:
     ports:
       - "${DB_PORT:-3307}:3306"
     environment:
-      - MYSQL_DATABASE=cancergenix
+      - MYSQL_DATABASE=genascope
       - MYSQL_USER=${DB_USER:-user}
       - MYSQL_PASSWORD=${DB_PASSWORD:-password}
       - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD:-rootpassword}
