--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cancer-genix",
+  "name": "genascope",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -12,6 +12,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@astrojs/node": "^9.2.1",
     "@astrojs/react": "^4.2.5",
     "@astrojs/tailwind": "^6.0.2",
     "@types/react": "^19.1.2",
@@ -20,6 +21,7 @@
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^6.22.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
