Fix docker environment scripts, created cleanup script

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,18 @@ pnpm-debug.log*
 # test results
 test-results/
 playwright-report/
+
+# Auto-created empty files
+M1_MAC_SETUP.md
+M1_README_SECTION.md
+docker-entrypoint.sh
+fix-frontend.sh
+frontend.Dockerfile
+parseAst.patch.js
+pytest.ini
+run_tests.sh
+run_tests_updated.sh
+start-backend.sh
+start-dev-local.sh
+universal-fix.sh
+yarn-start.sh
