--- a/docker-compose.postgresql.dev.yml
+++ b/docker-compose.postgresql.dev.yml
@@ -29,7 +29,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - backend/.env.local
+      - ../genascope-backend/.env.local
     networks:
       - genascope-network
     depends_on:
