--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,24 @@
   "extends": "astro/tsconfigs/strict",
   "include": [
     ".astro/types.d.ts",
-    "**/*"
+    "src/**/*",
+    "*.ts",
+    "*.tsx"
   ],
   "exclude": [
-    "dist"
+    "dist",
+    "node_modules",
+    "**/*.test.*",
+    "**/*.spec.*",
+    ".astro",
+    "test-results",
+    "playwright-report"
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "incremental": true,
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true
   }
 }
