--- a/docker-compose.postgresql.dev.yml
+++ b/docker-compose.postgresql.dev.yml
@@ -41,7 +41,7 @@ services:
 
   # PostgreSQL Database
   db:
-    image: postgres:15-alpine
+    image: pgvector/pgvector:pg15
     ports:
       - "5432:5432"
     environment:
