fix: remove trailing slash from backend URLs to prevent double slashes
- Fixed development backend URL in generate-fly-config.js (removed trailing slash)
- Improved getApiUrl function to handle trailing/leading slashes robustly
- Now generates clean URLs like https://genascope-backend.fly.dev/api/auth/token
- Prevents 404 errors from double slashes in API requests

--- a/fly.development.toml
+++ b/fly.development.toml
@@ -8,7 +8,7 @@ primary_region = 'den'
 
 [env]
   HOST = "0.0.0.0"
-  PUBLIC_API_URL = "https://genascope-backend.fly.dev/"
+  PUBLIC_API_URL = "https://genascope-backend.fly.dev"
   NODE_ENV = "development"
 
 [http_service]
