--- a/config/.env.staging
+++ b/config/.env.staging
@@ -1,9 +1,3 @@
-# Staging Environment Configuration
-PUBLIC_API_URL=https://genascope-backend-staging.fly.dev
-NODE_ENV=staging
-FLY_APP_NAME=genascope-frontend-staging
-FLY_REGION=den
-VM_MEMORY=1gb
-VM_CPUS=1
-MIN_MACHINES=0
-AUTO_STOP=suspend
+
+# Local Staging Environment Configuration (for reference only)
+PUBLIC_API_URL=http://localhost:8000
