ci: add GitHub Actions workflow to build and publish frontend Docker image to GHCR on push to main

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,11 @@ name: Build & Publish Frontend Docker Image
 on:
   push:
     branches:
-      - '**'
+      - [main]
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build-and-push:
