correct the syntax

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,8 +2,7 @@ name: Build & Publish Frontend Docker Image
 
 on:
   push:
-    branches:
-      - [main]
+    branches: [main]
 
 permissions:
   contents: read
