fix: Update apiConfig to use import.meta.env for client-side environment variables
- Fixed frontend API configuration to properly read PUBLIC_API_URL in browser
- Changed from process.env to import.meta.env for Astro compatibility
- Updated fallback backend URLs to use port 80 (service port) instead of 8000
- This resolves the 'localhost:8000 connection refused' error in Kubernetes deployments

--- a/helm/genascope-frontend/values.yaml
+++ b/helm/genascope-frontend/values.yaml
@@ -21,7 +21,7 @@ fullnameOverride: ""
 # Environment-specific configuration
 config:
   # These will be overridden in environment-specific values files
-  backendUrl: "http://localhost:8000"
+  backendUrl: "http://genascope-backend.default.svc.cluster.local:80"
   nodeEnv: "development"
   host: "0.0.0.0"
   port: "4321"
@@ -118,3 +118,11 @@ probes:
 configMap:
   create: true
   data: {}
+
+# Network policy configuration
+networkPolicy:
+  enabled: true
+  ingressNamespace: "ingress"
+  allowExternalHTTPS: true
+  allowedNamespaces: []
+  backendNamespaces: []
