--- a/helm/genascope-frontend/values/dev.yaml
+++ b/helm/genascope-frontend/values/dev.yaml
@@ -1,7 +1,19 @@
 # Development environment configuration
 config:
-  backendUrl: "http://genascope-backend.dev.svc.cluster.local:8000"
+  backendUrl: "http://genascope-backend.dev.svc.cluster.local:80"
   nodeEnv: "development"
+
+# Development - More permissive for testing
+networkPolicy:
+  enabled: true
+  ingressNamespace: "ingress"
+  allowExternalHTTPS: true
+  allowedNamespaces:
+    - "kube-system"      # For debugging tools
+    - "monitoring"       # If you have monitoring
+  backendNamespaces:
+    - "dev"              # Backend services in dev namespace
+    - "shared-services"  # Shared services if any
 
 replicaCount: 1
 
