fix: Update API config to use short service name for dev environment
- Fixed hostname mapping for genascope-dev.local to use genascope-backend:80
- Added runtime config API endpoint for future dynamic configuration
- This should resolve the DNS resolution issue in dev environment

--- a/helm/genascope-frontend/values/dev.yaml
+++ b/helm/genascope-frontend/values/dev.yaml
@@ -1,6 +1,6 @@
 # Development environment configuration
 config:
-  backendUrl: "http://genascope-backend.dev.svc.cluster.local:80"
+  backendUrl: "http://genascope-backend:80"
   nodeEnv: "development"
 
 # Development - More permissive for testing
