--- a/helm/genascope-frontend/templates/deployment.yaml
+++ b/helm/genascope-frontend/templates/deployment.yaml
@@ -41,6 +41,8 @@ spec:
           env:
             - name: PUBLIC_API_URL
               value: {{ .Values.config.backendUrl | quote }}
+            - name: BACKEND_URL
+              value: {{ .Values.config.backendUrl | quote }}
             - name: NODE_ENV
               value: {{ .Values.config.nodeEnv | quote }}
             - name: HOST
