--- a/helm/genascope-frontend/values/dev.yaml
+++ b/helm/genascope-frontend/values/dev.yaml
@@ -1,6 +1,7 @@
 # Development environment configuration
 config:
-  backendUrl: "http://genascope-backend:80"
+  # Backend URL for server-side proxy (Kubernetes internal DNS)
+  backendUrl: "http://genascope-backend.dev.svc.cluster.local:80"
   nodeEnv: "development"
 
 # Development - More permissive for testing
