Fix environment detection for chat-dev.genascope.com and update ingress config
- Explicitly handle chat-dev.genascope.com as development environment
- Add chat-dev.genascope.com to ingress hosts
- Fix syntax error in apiConfig.ts
- Add Vite asset handling configuration

--- a/helm/genascope-frontend/values/dev.yaml
+++ b/helm/genascope-frontend/values/dev.yaml
@@ -52,3 +52,7 @@ ingress:
       paths:
         - path: /
           pathType: Prefix
+    - host: chat-dev.genascope.com
+      paths:
+        - path: /
+          pathType: Prefix
