--- a/helm/genascope-frontend/values/dev.yaml
+++ b/helm/genascope-frontend/values/dev.yaml
@@ -40,7 +40,9 @@ ingress:
   enabled: true
   className: "public"
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
   hosts:
     - host: genascope-dev.local
       paths:
