feat: enhanced dashboard with pie charts and performance optimizations
- Add AppointmentStatsChart and InviteStatsChart with Ant Design Charts
- Create EnhancedInviteStatsWidget and EnhancedAppointmentStatsWidget with pie charts
- Update main dashboard to use enhanced widgets with visual analytics
- Add Cloudflare-optimized caching middleware for better performance
- Implement resource preloading for dashboard pages
- Set proper cache headers for static assets, API routes, and dynamic pages
- Improve dashboard loading performance with stale-while-revalidate strategy

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "deploy:prod": "npm run fly:config:prod && flyctl deploy"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.6.5",
     "@ant-design/icons": "^6.0.0",
+    "@ant-design/plots": "^2.6.5",
     "@astrojs/node": "^9.4.0",
     "@astrojs/react": "^4.2.5",
     "@astrojs/tailwind": "^6.0.2",
