--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
+    "docker:dev": "vite --host 0.0.0.0 --port 4321",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test:unit": "vitest run",
