--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "jsdom": "^26.1.0",
     "playwright": "^1.52.0",
+    "postcss": "^8.4.32",
     "typescript": "^5.9.2",
     "vite": "^5.4.20",
     "vitest": "^3.1.2"
