Add workflow_dispatch trigger to enable manual Docker builds

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,6 +3,7 @@ name: Build & Publish Frontend Docker Image
 on:
   push:
     branches: [main]
+  workflow_dispatch:
 
 permissions:
   contents: read
