fix: Add /ai-chat route to Ingress for backend API
The AI chat endpoints use /ai-chat/ prefix instead of /api/. Added
Ingress rule to route these requests directly to the backend service.

--- a/helm/genascope-frontend/templates/ingress.yaml
+++ b/helm/genascope-frontend/templates/ingress.yaml
@@ -45,6 +45,14 @@ spec:
                 name: {{ $.Values.backend.serviceName }}
                 port:
                   number: {{ $.Values.backend.servicePort }}
+          # AI Chat endpoints (separate from /api prefix)
+          - path: /ai-chat
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ $.Values.backend.serviceName }}
+                port:
+                  number: {{ $.Values.backend.servicePort }}
           {{- end }}
           # Frontend routes (catch-all, must come last)
           {{- range .paths }}
